fixed view on mobile

--- a/css/business-casual.css
+++ b/css/business-casual.css
@@ -112,7 +112,7 @@ ul {
     margin: auto;
     width: 100%;
     padding-bottom: 75%;
-    padding: 0px;
+    padding: 10px;
     z-index: 3;
     position: relative;
     min-width: 880px;
@@ -190,7 +190,7 @@ footer p {
     padding: 50px 0;
 }
 
-@media screen and (min-width:64px) {
+@media screen and (min-width:4px) {
     .brand {
         display: inherit;
         margin: 0;
